--- a/webdev_class_code/style.css
+++ b/webdev_class_code/style.css
@@ -1,8 +1,9 @@
 body {
-	font-family: 'Chewy', cursive;
-	font-size: 25px;
+	font-family: 'Prosto One', cursive;
+	font-size: 19px;
 	width:999px;
 	margin-left:100px;
 	color: #336600;
 	background-color: #9C7B59;
-	}
+
+}
