--- a/webdev_class_code/style.css
+++ b/webdev_class_code/style.css
@@ -1,9 +1,11 @@
 body {
+	
 	font-family: 'Prosto One', cursive;
-	font-size: 19px;
+	font-size: 20px;
 	width:999px;
 	margin-left:100px;
 	color: #336600;
-	background-color: #9C7B59;
+	background-color: #AC8359;
+
 
 }
